# Bolna-SignalLayer

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  Makefile  PRD.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  calls.py  deals.py  deps.py  intelligence.py  memory.py  stakeholders.py  webhooks.py  ws.py
backend/app/core/: config.py  exceptions.py  logging.py  queue.py  redis.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  action_recommendation.py  call_event.py  call_session.py  deal.py  deal_snapshot.py  evidence_anchor.py  extraction_snapshot.py  followup_draft.py  memory_document.py  org.py  risk_snapshot.py  stakeholder.py  stakeholder_snapshot.py  transcript_utterance.py  user.py
backend/app/schemas/: auth.py  call.py  deal.py  intelligence.py  stakeholder.py
backend/app/workers/: maintenance.py  run.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 00d8f6cf3d3a_add_memory_document_uniqueness.py  (+15 more)
backend/scripts/: live_bolna_smoke.py  seed.py
backend/tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_call_routes.py  test_call_service.py  test_deal_routes.py  test_deal_service.py  test_extraction_service.py  test_main.py  test_memory_service.py  test_pubsub.py  test_recommendation_service.py  test_risk_service.py  test_seed.py  test_stakeholder_service.py  test_transcript_service.py  test_webhook_ingestion.py  test_webhook_routes.py  test_ws.py
frontend/: Dockerfile
(+35 files in other folders)
