[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "DealGraph Voice OS backend services and worker runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.1",
    "dramatiq[redis]>=2.1.0",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "pydantic[email]>=2.12",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.9",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "google-genai>=1.0.0",
    "pgvector>=0.3.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.41.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]
